sandbox/output
TicketDispenserTest.java:68: error: incompatible types: TurnNumberSequenceVip cannot be converted to TurnNumberSequence
        TurnNumberSequence vipTurnNumberSequence = new TurnNumberSequenceVip(1001);
                                                   ^
1 error
